07_retirement/grade.txt
Grading at Tue Jan 22 09:02:31 UTC 2019
Attempting to compile retirement.c
retirement.c: In function ‘retirement’:
retirement.c:26:12: error: ‘return’ with a value, in function returning void [-Werror]
     return balance;
            ^
retirement.c:35:12: error: ‘return’ with a value, in function returning void [-Werror]
     return balance;
            ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
